--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongoose": "^5.4.20",
     "morgan": "~1.9.0",
     "pug": "^2.0.3",
+    "socket.io": "^2.2.0",
+    "socketio-jwt": "^4.5.0",
     "swagger-jsdoc": "^3.2.8",
     "unirest": "^0.6.0"
   }
