--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
     "express": "~4.16.0",
+    "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
-    "hbs": "^4.0.3",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.20",
