--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.3",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "socket.io": "^2.2.0",
     "socketio-jwt": "^4.5.0",
     "swagger-jsdoc": "^3.2.8",
