--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^3.0.5",
     "connect-flash": "^0.1.1",
     "cookie": "^0.3.1",
     "cookie-parser": "~1.4.3",
