--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "socketio-jwt": "^4.5.0",
     "swagger-jsdoc": "^3.2.8",
     "unirest": "^0.6.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.2",
+    "supertest": "^3.0.0"
   }
 }
