--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "./node_modules/.bin/mocha"
   },
   "dependencies": {
     "bcrypt": "^3.0.5",
@@ -35,6 +36,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.2",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "mockgoose": "^8.0.1",
+    "supervisor": "^0.12.0"
   }
 }
