--- a/package.json
+++ b/package.json
@@ -3,8 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "./node_modules/.bin/mocha"
+    "start": "SET NODE_ENV=dev& node ./bin/www",
+    "test": "nodemon --exec \"mocha --timeout 10000\"",
+    "coverage": "nyc --reporter=lcov --reporter=text-lcov npm test"
+  },
+  "nyc": {
+    "_comment": "Purpose of this part: to do code coverage within Mocha/Chai using Istanbul",
+    "register": "babel-register",
+    "include": [
+      "**/*.js",
+      "./*.js"
+    ],
+    "exclude": [
+      "**/node_modules/**",
+      "**/public/**",
+      "**/test/**",
+      "**/coverage/**"
+    ],
+    "all": true
   },
   "dependencies": {
     "bcrypt": "^3.0.5",
@@ -34,10 +50,14 @@
     "unirest": "^0.6.0"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "chai": "^4.1.2",
+    "chai-http": "^4.2.1",
     "mocha": "^5.0.2",
-    "supertest": "^3.0.0",
+    "mocha-logger": "^1.0.6",
     "mockgoose": "^8.0.1",
+    "nyc": "^13.3.0",
+    "supertest": "^3.0.0",
     "supervisor": "^0.12.0"
   }
 }
