--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "SET NODE_ENV=dev& node ./bin/www",
+    "start": "SET NODE_ENV=test& node ./bin/www",
     "test": "nodemon --exec \"mocha --timeout 10000\"",
     "coverage": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
@@ -50,14 +50,9 @@
     "unirest": "^0.6.0"
   },
   "devDependencies": {
-    "assert": "^1.4.1",
     "chai": "^4.1.2",
     "chai-http": "^4.2.1",
     "mocha": "^5.0.2",
-    "mocha-logger": "^1.0.6",
-    "mockgoose": "^8.0.1",
-    "nyc": "^13.3.0",
-    "supertest": "^3.0.0",
-    "supervisor": "^0.12.0"
+    "nyc": "^13.3.0"
   }
 }
