--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "coverage": "nyc --reporter=lcov --reporter=text-lcov mocha --timeout 28000 --exit"
   },
   "engines": {
-    "node": "8.12.0"
+    "node": "8.12.0",
+    "npm": "6.4.1"
   },
   "nyc": {
     "_comment": "Purpose of this part: to do code coverage within Mocha/Chai using Istanbul",
